<resources>
    <string name="app_name">AAS</string>
    <string name="teacher_btn_string">Teacher</string>
    <string name="student_btn_string">Student</string>
    <string name="enter_student_id_here">Enter Student ID Here</string>
    <string name="teacher_view_text">Welcome</string>
    <string name="attendance_checkbox_text">Attendance</string>
    <string name="attendance_count_hint">Total : </string>
    <string name="attendance_view_btn">Attendance View</string>
    <string name="enter_date_here">Select Date</string>
    <string name="period_id_prompt">Select Period</string>
    <string name="submit_btn_common">Submit</string>
    <string name="enter_class_id_here">Enter Class ID here</string>
    <string name="total_attendance">Total Attendance</string>
    <string name="teacher_prompt_text"><u>Are you a teacher? Click here!</u></string>
    <string name="login_e_mail_here_text">Enter e-mail here</string>
    <string name="enter_password">Enter password</string>
    <string name="student_go_back_text"><u>Don\'t have any idea of this? Click Here!</u></string>
    <string name="teacher_login_text">Teacher Login</string>
    <string name="login_to_sign_up_text"><u>Don\'t have an Account? Sign Up!</u></string>
    <string name="attendance_btn_hint">Attendance</string>
    <string name="report_btn_hint">Report</string>
    <string name="access_level_hint">Access Level : %1s</string>
    <string name="last_class_hint">Last Class : %1s</string>
    <string name="verified_text">Verified</string>
    <string name="sign_out_btn_txt">Sign Out</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="enter_e_mail_hint">Enter your e-mail here</string>
    <string name="enter_teacher_id_hint">Enter Teacher ID Here</string>
    <string name="enter_name_hint">Enter Name Here</string>
    <string name="already_have_an_account_btn_text">Already have an Account? Click here!</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="for_teachers_only_text">For Teachers Only</string>
    <string-array name="periods">
        <item>P1</item>
        <item>P2</item>
        <item>P3</item>
        <item>P4</item>
        <item>P5</item>
        <item>P6</item>
        <item>P7</item>
    </string-array>
</resources>
