<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/primary_dark_accent_gradient">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/teacher_login_text"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/colorLight"
        android:layout_above="@id/login_fields"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:id="@+id/login_fields">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_e_mail_here_text"
            android:background="@drawable/light_field_background"
            android:textColorHint="@color/colorLight"
            android:fontFamily="@font/roboto_light"
            android:padding="16dp"/>
        <EditText
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:background="@drawable/light_field_background"
            android:textColorHint="@color/colorLight"
            android:fontFamily="@font/roboto_light"
            android:padding="16dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/submit_login"
        android:layout_below="@id/login_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/submit_btn_common"
        android:padding="10dp"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/colorLight"/>
    <TextView
        android:layout_below="@id/submit_login"
        android:id="@+id/student_go_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:fontFamily="@font/roboto_light"
        android:text="@string/student_go_back_text"
        android:textColor="@color/colorBlack"
        android:clickable="true"/>
</RelativeLayout>