<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="att2.com.wrc.aas.TeacherIntermediateActivity">

    <LinearLayout
        android:id="@+id/teacher_view_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:text="@string/teacher_view_text"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please Enter Your Class Detail"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textAllCaps="true"
            android:fontFamily="@font/roboto_light"
            style="@style/Base.TextAppearance.AppCompat.Body1"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_below="@id/teacher_view_text">

        <EditText
            android:id="@+id/teacher_class_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/enter_class_id_here" />

        <EditText
            android:id="@+id/teacher_date_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/enter_date_here" />

        <EditText
            android:id="@+id/teacher_period_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/enter_period_id_here" />

        <Button
            android:id="@+id/submit_teacher_intermediate"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_background_accent"
            android:fontFamily="@font/roboto_black"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/submit_btn_common"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
